==> china-djyos/djyos/bsp/cpudrv/stm32/f7/src/eth/cpu_peri_eth.c <==
#include <stdio.h>
#include <stddef.h>
#include <stdint.h>
#include <string.h>
#include <cpu_peri.h>
#include <board-config.h>
#include <sys/socket.h>
#include <netbsp.h>
#include <dbug.h>
#include "shell.h"
#include "stm32f7xx_hal.h"
#include "stm32f7xx_hal_eth.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_MAC    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_ETH_NETCARD_NAME    "STM32F7_ETH"   //"网卡名称",
#define CFG_ETH_LOOP_CYCLE      1000         //"网卡轮询周期(uS)",中断模式无须填写
#define CFG_ETH_LOOP_ENABLE     true            //"网卡接收是否轮询",
#define CFG_ETH_HARD_MAC_ADDR   true            //"硬件生成Mac地址",
#define CFG_ETH_MAC_ADDR0      00           //"MAC ADDR0",若选中"硬件生成Mac地址",则无须填写
#define CFG_ETH_MAC_ADDR1      02           //"MAC ADDR1",若选中"硬件生成Mac地址",则无须填写
#define CFG_ETH_MAC_ADDR2      03           //"MAC ADDR2",若选中"硬件生成Mac地址",则无须填写
#define CFG_ETH_MAC_ADDR3      04           //"MAC ADDR3",若选中"硬件生成Mac地址",则无须填写
#define CFG_ETH_MAC_ADDR4      05           //"MAC ADDR4",若选中"硬件生成Mac地址",则无须填写
#define CFG_ETH_MAC_ADDR5      06           //"MAC ADDR5",若选中"硬件生成Mac地址",则无须填写
#define CN_DEVNAME_LEN 32
#define EthRxDescs      8
#define EthTxDescs      8
#define EthRxBufSize    (1528UL)
#define EthTxBufSize    (1528UL)

static void ETH_HardDrvInit(tagMacDriver *pDrive)
{
    ETH_HandleTypeDef *heth;

    heth = pDrive->EthHandle;

    // configure ethernet peripheral (GPIOs, clocks, MAC, DMA)
    HAL_ETH_Init(heth);

    // Initialize Tx/Rx Descriptors list: Chain Mode
    HAL_ETH_DMATxDescListInit(heth, DMATxDscrTab, &Tx_Buff[0][0], EthTxDescs,EthTxBufSize);
    HAL_ETH_DMARxDescListInit(heth, DMARxDscrTab, &Rx_Buff[0][0], EthRxDescs,EthRxBufSize);

    /* Enable MAC and DMA transmission and reception */
    HAL_ETH_Start(heth);
}

static struct NetPkg *__MacRcv(struct NetDev *devhandle)
{
    struct NetPkg         *pkg = NULL;
    tagMacDriver      *pDrive;
    ETH_HandleTypeDef *EthHandle;
    volatile ETH_DMADescTypeDef *dmarxdesc;
    u16 CopyBytes,len;
    u8   *dst,*src;

    pDrive = &gMacDriver;
    EthHandle = pDrive->EthHandle;
    // get received frame
    if(HAL_ETH_GetReceivedFrame_IT(EthHandle) != HAL_OK)
        return NULL;

    len = EthHandle->RxFrameInfos.length;
    CopyBytes = len;

    if(len > 0)
    {
        pkg = PkgMalloc(len,CN_PKLGLST_END);
        if(NULL == pkg)
            pDrive->debuginfo.nopkgCnts++;
    }

    if(NULL != pkg)
    {
        dmarxdesc = EthHandle->RxFrameInfos.FSRxDesc;
        dst = PkgGetCurrentBuffer(pkg);
//      dst = (u8 *)(pkg->buf +pkg->offset);
        src = (u8 *)EthHandle->RxFrameInfos.buffer;
        while(CopyBytes > EthRxBufSize)
        {
            memcpy( dst, src, EthRxBufSize);
            CopyBytes -= EthRxBufSize;
            dst += EthRxBufSize;

            dmarxdesc->Status |= ETH_DMARXDESC_OWN;     //release Des to DMA
            dmarxdesc = (ETH_DMADescTypeDef *)(dmarxdesc->Buffer2NextDescAddr);
            src = (u8 *)(dmarxdesc->Buffer1Addr);
        }
        memcpy( dst, src, CopyBytes);
        dmarxdesc->Status |= ETH_DMARXDESC_OWN;

        PkgSetDataLen(pkg, len);
//      pkg->datalen = len;
        EthHandle->RxFrameInfos.SegCount =0;
    }
    else        //if malloc pkg failed
    {
        dmarxdesc = EthHandle->RxFrameInfos.FSRxDesc;
        while(CopyBytes > EthRxBufSize)
        {
            CopyBytes -= EthRxBufSize;

            dmarxdesc->Status |= ETH_DMARXDESC_OWN;     //release Des to DMA
            dmarxdesc = (ETH_DMADescTypeDef *)(dmarxdesc->Buffer2NextDescAddr);
        }
        dmarxdesc->Status |= ETH_DMARXDESC_OWN;
        EthHandle->RxFrameInfos.SegCount =0;
    }

    // When Rx Buffer unavailable flag is set: clear it and resume reception
    if ((EthHandle->Instance->DMASR & ETH_DMASR_RBUS) != (uint32_t)RESET)
    {
        // Clear RBUS ETHERNET DMA flag
        EthHandle->Instance->DMASR = ETH_DMASR_RBUS;
        // Resume DMA reception
        EthHandle->Instance->DMARPDR = 0;

        pDrive->debuginfo.rxoverInts++;
    }

    return pkg;
}

static bool_t MacSnd(struct NetDev* handle,struct NetPkg * pkg, u32 netdevtask)
{
    bool_t             result;
    tagMacDriver      *pDrive;
    ETH_HandleTypeDef *EthHandle;
    ETH_DMADescTypeDef *DmaTxDesc;
    struct NetPkg         *tmppkg;
    u8                *dst,*src;
    u16                len=0;

    result = false;
    pDrive = &gMacDriver;
    EthHandle = pDrive->EthHandle;
    pDrive->debuginfo.sndTimes++;
    if((NULL == handle)||(NULL == pkg))
        return result;

    if(Lock_MutexPend(pDrive->protect,CN_TIMEOUT_FOREVER))
    {
        DmaTxDesc = pDrive->EthHandle->TxDesc;
        //Is this buffer available? If not, goto error
        if((DmaTxDesc->Status & ETH_DMATXDESC_OWN) != (uint32_t)RESET)
        {
            pDrive->debuginfo.sndnobdCnt ++;
            goto NODESCERROR;
        }

        //copy datas to static frame buffer
        tmppkg = pkg;
        dst      = &gTxBuffer[0];
        len = PkgFrameDataCopy(tmppkg, dst);
//        do
//        {
//            src = (tmppkg->buf + tmppkg->offset);
//            memcpy(dst,src,PkgGetDataLen(tmppkg));
//            dst      += PkgGetDataLen(tmppkg);
//            len      += PkgGetDataLen(tmppkg);
////          memcpy(dst,src,tmppkg->datalen);
////          dst      += tmppkg->datalen;
////          len      += tmppkg->datalen;
//            if(PkgIsBufferEnd(tmppkg))
//            {
//                tmppkg = NULL;
//                break;
//            }
//            else
//            {
//                tmppkg = PkgGetNextUnit(tmppkg);
//            }
//        }while(NULL != tmppkg );

        if(len < EthTxBufSize)
        {
            src = &gTxBuffer[0];
            dst = (u8 *)(EthHandle->TxDesc->Buffer1Addr);
            memcpy( dst,src ,len );
            // Point to next descriptor
            DmaTxDesc = (ETH_DMADescTypeDef *)(DmaTxDesc->Buffer2NextDescAddr);
            //Prepare transmit descriptors to give to DMA
            if(HAL_OK == HAL_ETH_TransmitFrame(EthHandle, len))
            {
                pDrive->debuginfo.sndOkTimes++;
                result = true;
            }
        }
        else
        {
            pDrive->debuginfo.sndPkgTooLongCnt++;
        }

NODESCERROR:
        // When Transmit Underflow flag is set, clear it and issue a Transmit
        //Poll Demand to resume transmission
        if ((EthHandle->Instance->DMASR & ETH_DMASR_TUS) != (uint32_t)RESET)
        {
            // Clear TUS ETHERNET DMA flag
            EthHandle->Instance->DMASR = ETH_DMASR_TUS;

            //Resume DMA transmission
            EthHandle->Instance->DMATPDR = 0;
        }
        Lock_MutexPost(pDrive->protect);
    }

    return result;
}

u32 ETH_IntHandler(ufast_t IntLine)
{
    tagMacDriver *pDrive;
    ETH_HandleTypeDef *EthHandle;

    pDrive = &gMacDriver;
    EthHandle = pDrive->EthHandle;

    pDrive->debuginfo.Ints++;
    if (__HAL_ETH_DMA_GET_FLAG(EthHandle, ETH_DMA_FLAG_R))
    {
        pDrive->debuginfo.rcvInts++;
        Lock_SempPost(pDrive->rcvsync);
        __HAL_ETH_DMA_CLEAR_IT(EthHandle, ETH_DMA_IT_R);    //Clear the Eth DMA Rx IT pending bits
        EthHandle->State = HAL_ETH_STATE_READY;             //Set HAL State to Ready
        __HAL_UNLOCK(EthHandle);
    }
    else if (__HAL_ETH_DMA_GET_FLAG(EthHandle, ETH_DMA_FLAG_T))
    {
        pDrive->debuginfo.sndInts++;
        __HAL_ETH_DMA_CLEAR_IT(EthHandle, ETH_DMA_IT_T);    //Clear the Eth DMA Tx IT pending bits
        EthHandle->State = HAL_ETH_STATE_READY;             //Set HAL State to Ready
        __HAL_UNLOCK(EthHandle);
    }

    __HAL_ETH_DMA_CLEAR_IT(EthHandle, ETH_DMA_IT_NIS);

    if(__HAL_ETH_DMA_GET_FLAG(EthHandle, ETH_DMA_FLAG_AIS))
    {
        pDrive->debuginfo.dmaerr++;
        __HAL_ETH_DMA_CLEAR_IT(EthHandle, ETH_DMA_FLAG_AIS);
        EthHandle->State = HAL_ETH_STATE_READY;

        __HAL_UNLOCK(EthHandle);
    }
    return 0;
}

static bool_t MacCtrl(struct NetDev *devhandle,u8 cmd,ptu32_t para)
{
    bool_t result = false;
    tagMacDriver   *pDrive;
    pDrive = &gMacDriver;
    if((pDrive->devhandle == devhandle)&&\
        (Lock_MutexPend(pDrive->protect,CN_TIMEOUT_FOREVER)))
    {
        switch(cmd)
        {
            case EN_NETDEV_SETNOPKG:
                if(para)
                {
                    ETH_HardDrvInit(pDrive);
                    pDrive->debuginfo.rsttimes++;
                }
                result = true;
                break;
            case EN_NETDEV_SETBORAD:
                if(para)
                {
                    __macbitsclear(&pDrive->EthHandle->Instance->MACFFR,ETH_MACFFR_BFD);
                    printk("mac broad enable\n\r");
                    pDrive->macstat.bfd = 0;
                }
                else
                {
                    __macbitsset(&pDrive->EthHandle->Instance->MACFFR,ETH_MACFFR_BFD);
                    printk("mac broad disable\n\r");
                    pDrive->macstat.bfd = 1;
                }
                result = true;
                break;
            case EN_NETDEV_SETPOINT:
                if(para)
                {
                    __macbitsclear(&pDrive->EthHandle->Instance->MACFFR,
                            ETH_MACFFR_HU);//绝对单播模式
                }
                else
                {
                    __macbitsset(&pDrive->EthHandle->Instance->MACFFR,
                            ETH_MACFFR_HU);//散列单播模式
                }
                result = true;
                break;
            case EN_NETDEV_SETMULTI:
                if(para)
                {
                   __macbitsset(&pDrive->EthHandle->Instance->MACFFR,
                           ETH_MACFFR_PAM);//pass all multicast
                }
                else
                {
                    __macbitsclear(&pDrive->EthHandle->Instance->MACFFR,
                            ETH_MACFFR_PAM);//multicast filt
                }
               result = true;
                break;
            case EN_NETDEV_SETRECV:
                if(para)
                {
                    HAL_ETH_StartReceive(pDrive->EthHandle);
                }
                else
                {
                    HAL_ETH_StopReceive(pDrive->EthHandle);
                }
                result = true;
                break;
            case EN_NETDEV_SETSEND:
                if(para)
                {
                    HAL_ETH_StartTransmit(pDrive->EthHandle);
                }
                else
                {
                    HAL_ETH_StopTransmit(pDrive->EthHandle);
                }
                break;
            case EN_NETDEV_SETMAC:
                memcpy(pDrive->macaddr,(u8 *)para, CN_MACADDR_LEN);
                ETH_HardDrvInit(pDrive);
                pDrive->debuginfo.rsttimes++;
                result = true;
                break;
            case EN_NETDEV_SETMULTIMAC:
                break;
            case EN_NETDEV_SETHOOK:
                pDrive->fnrcvhook = (fnRcvDeal)para;
                break;
            case EN_NETDEV_GTETMAC:
                if((u8 *)para != NULL)
                {
                    memcpy((u8 *)para,pDrive->macaddr, CN_MACADDR_LEN);
                    result = true;
                }
                break;
            case EN_NETDEV_RESET:
                if(para)
                {
                    ETH_HardDrvInit(pDrive);
                    pDrive->debuginfo.rsttimes++;
                    result = true;
                }
                break;
            case EN_NETDEV_LOWPOWER:
                if(para == 1)
                {
                    RCC->AHB1ENR&=~(1<<25);  //禁能ETHMAC时钟
                    GMAC_InLowPowerPinCfg();
                }
                else
                {
                     RCC->AHB1ENR|=1<<25;  //使能ETHMAC时钟
                     GMAC_OutLowPowerPinCfg();
                     MacReset(0);
                }
                result = true;
                break;
            case (EN_NETDEV_ADDRFILTER):    //增加一条是否接收所有包
                if(para)
                {
                    __macbitsclear(&pDrive->EthHandle->Instance->MACFFR,
                            ETH_MACFFR_RA);//addr filter
                }
                else
                {
                    __macbitsset(&pDrive->EthHandle->Instance->MACFFR,
                                               ETH_MACFFR_RA);//pass all pkg
                }
                break;
            default:
                result = false;
                break;
        }
        Lock_MutexPost(pDrive->protect);
    }

    return result;
}

bool_t ModuleInstall_ETH(void)
{
    tagMacDriver   *pDrive = &gMacDriver;
    struct NetDevPara   devpara;
    //GET THE SIGNATURE OF THE DEVICE
#if (CFG_ETH_HARD_MAC_ADDR == true)
    u32  signature[3];
    u8 gc_NetMac[CN_MACADDR_LEN];
    memset(signature,0,sizeof(signature));
    GetCpuID(&signature[0],&signature[1],&signature[2]);
    printk("CPU SIGNATURE:%08X-%08X-%08X\n\r",signature[0],signature[1],signature[2]);
    //use the signature as the mac address
    signature[0] = signature[0]^signature[1]^signature[2];
    //memcpy(gc_NetMac,&signature[0],CN_MACADDR_LEN);
    memcpy(&gc_NetMac[2], &signature[0], 4);
    gc_NetMac[1] = (u8)(signature[1]&0xFF);
    gc_NetMac[0] = 0x00;      //根据mac的规定，第一字节某位置为1表示广播或者组播
//    if (gc_NetMac[5]==0) {
//        gc_NetMac[5]=0xFF;
//    }
#else
    u8 gc_NetMac[CN_MACADDR_LEN] ={CFG_ETH_MAC_ADDR0,CFG_ETH_MAC_ADDR1,
                                   CFG_ETH_MAC_ADDR2,CFG_ETH_MAC_ADDR3,
                                   CFG_ETH_MAC_ADDR4,CFG_ETH_MAC_ADDR5};
#endif

    memset((void *)pDrive,0,sizeof(tagMacDriver));
    //copy the config para to the pDrive
    memcpy(pDrive->devname,CFG_ETH_NETCARD_NAME,CN_DEVNAME_LEN-1);
    pDrive->devname[CN_DEVNAME_LEN-1] = '\0';
    memcpy((void *)pDrive->macaddr,gc_NetMac,CN_MACADDR_LEN);
    printf("mac: %02x-%02x-%02x-%02x-%02x-%02x！\r\n",
            gc_NetMac[0], gc_NetMac[1],gc_NetMac[2], gc_NetMac[3],gc_NetMac[4], gc_NetMac[5]);
    if(CFG_ETH_LOOP_ENABLE)
    {
        pDrive->loopcycle = CFG_ETH_LOOP_CYCLE;
    }
    else
        pDrive->loopcycle = CN_TIMEOUT_FOREVER;
    pDrive->fnrcvhook = NULL;
    //set the work mode and speed
    pDrive->macstat.pm = 0;         //primmiscuous mode:= 1,no MAC addr filte
    pDrive->macstat.duplex = 1;    //duplex full
    pDrive->macstat.speed = 1;     //100 Mb
    pDrive->macstat.bfd = 0;       //broadcast frames disable
    pDrive->macstat.mii = 0;       //use RMII mode

    pDrive->EthHandle = &sEthHandle;
    pDrive->EthHandle->Instance = ETH;
    pDrive->EthHandle->Init.MACAddr = pDrive->macaddr;
    pDrive->EthHandle->Init.AutoNegotiation = ETH_AUTONEGOTIATION_ENABLE;
    pDrive->EthHandle->Init.Speed = ETH_SPEED_100M;
    pDrive->EthHandle->Init.DuplexMode = ETH_MODE_FULLDUPLEX;
    pDrive->EthHandle->Init.MediaInterface = ETH_MEDIA_INTERFACE_RMII;
    pDrive->EthHandle->Init.RxMode = ETH_RXINTERRUPT_MODE;
    pDrive->EthHandle->Init.ChecksumMode = ETH_CHECKSUM_BY_HARDWARE;//ETH_CHECKSUM_BY_SOFTWARE;
    pDrive->EthHandle->Init.PhyAddress = 0x00;//not used;

    ETH_HardDrvInit(pDrive);

    //all the configuration has set in the pDrive now,we need some sys assistant
    //application some semphore and mutex
    pDrive->rcvsync = Lock_SempCreate(1,1,CN_BLOCK_FIFO,NULL);
    if(NULL == pDrive->rcvsync)
    {
        goto RCVSYNC_FAILED;
    }
    pDrive->protect = Lock_MutexCreate(NULL);
    if(NULL == pDrive->protect)
    {
        goto DEVPROTECT_FAILED;
    }
    MacCtrl(pDrive->devhandle,EN_NETDEV_ADDRFILTER,1);//开通地址过滤功能

    //install the net device
    devpara.ifctrl = MacCtrl;
    devpara.ifsend = MacSnd;
    devpara.iftype = EN_LINK_ETHERNET;
    devpara.devfunc = CN_IPDEV_ALL;
    memcpy(devpara.mac,gc_NetMac,CN_MACADDR_LEN);
    devpara.name = (char *)pDrive->devname;
    devpara.mtu = CN_ETH_MTU;
    devpara.Private = (ptu32_t)pDrive;
    pDrive->devhandle = NetDev_Install(&devpara);
    if(NULL == pDrive->devhandle)
    {
        goto NetInstallFailed;
    }
    if(false == __CreateRcvTask(pDrive->devhandle))
    {
        goto RcvTaskFailed;
    }

    if(false == CFG_ETH_LOOP_ENABLE)
    {
        Int_Register(CN_INT_LINE_ETH);
        Int_SettoAsynSignal(CN_INT_LINE_ETH);
        Int_ClearLine(CN_INT_LINE_ETH);
        Int_IsrConnect(CN_INT_LINE_ETH,ETH_IntHandler);
        Int_ContactLine(CN_INT_LINE_ETH);
    }
    info_printf("eth","%s:Install Net Device %s success\n\r",__FUNCTION__,pDrive->devname);
    return true;

RcvTaskFailed:
    NetDev_Uninstall(pDrive->devname);
NetInstallFailed:
    Lock_MutexDelete(pDrive->protect);
    pDrive->protect = NULL;
DEVPROTECT_FAILED:
    Lock_SempDelete(pDrive->rcvsync);
    pDrive->rcvsync = NULL;
RCVSYNC_FAILED:
    error_printf("bspETH","Install Net Device %s failed\n\r",pDrive->devname);
    return false;
}
